# swc-query

./: .gitignore  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  index.ts  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: CI.yml
__test__/: binding.spec.mjs  test-utils.ts
__test__/aws_apigateway_public_api/: index.spec.ts
__test__/aws_apigateway_public_api/code/: index.ts
__test__/aws_apigateway_public_api/expected/: index.snapshot
__test__/error/: file-read.snapshot  index.spec.ts  syntax.js  syntax.snapshot  win32-file-read.snapshot
__test__/fixtures/: a.js
__test__/utils/: index.ts  safe.snapshot
crates/js_audit_ast_pattern/: Cargo.toml
crates/js_audit_rule/: Cargo.toml
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: env.rs  error.rs  lib.rs  parser.rs  path.rs
src/rules/: mod.rs
src/rules/cwe_284/: mod.rs  (+1 more)
(+4 files in other folders)
