[package]
edition = "2021"
name = "swc-query"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oxc_allocator = "0.21.0"
oxc_parser = "0.21.0"
oxc_span = "0.21.0"
oxc_diagnostics = "0.21.0"
miette = { version = "7.2.0", features = ["fancy"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
