[package]
edition = "2021"
name = "js_audit"
version = "0.0.0"

[workspace]
members = [
  "crates/*"
]

[lib]
crate-type = ["cdylib"]

[dependencies]
js_audit_rule = { version = "0.0.0", path = "crates/js_audit_rule" }
js_audit_ast_pattern = { version = "0.0.0", path = "crates/js_audit_ast_pattern" }
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oxc_allocator = "0.22.1"
oxc_ast = "0.22.1"
oxc_parser = "0.22.1"
oxc_span = "0.22.1"
oxc_diagnostics = "0.22.1"
miette = { version = "7.2.0", features = ["fancy"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
